syntax = "proto3";

import "google/protobuf/empty.proto";

import "message/Vec2i.proto";
import "message/Tilemap.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model";
option java_outer_classname = "WorldAccessorProto";

service WorldAccessorService {
  rpc GetTilemap(google.protobuf.Empty) returns (TilemapRpcDto);
}
